tests/variables/valid/exp_return_val.su
s32 main() {
    s32 a;
    s32 b;
    a = b = 4;
    return a - b;
}