tests/variables/invalid/syntax_err_no_semicolon.su
s32 main() {
    s32 a = 2
    a = a + 4;
    return a;
}